# ORB_SLAM2_detailed_comments

./: .gitignore  CMakeLists.txt
Examples/: CMakeLists.txt
Examples/Monocular/: mono_euroc.cc  mono_kitti.cc  mono_tum.cc
Examples/RGB-D/: rgbd_tum.cc
Examples/Stereo/: stereo_euroc.cc  stereo_kitti.cc
cmake/: packages.cmake
include/: LoopClosing.h  ORBextractor.h  PnPsolver.h
src/: CMakeLists.txt  FrameDrawer.cc  Sim3Solver.cc
